# quarto-in-rust

./: Cargo.toml
benches/: main_bench.rs
src/: board.rs  coordinate.rs  game.rs  lib.rs  main.rs  minimax.rs  piece.rs  quatro_minimax.rs
