[package]
name = "quatro-in-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
bincode = "1.3.3"

[dev-dependencies]
criterion = "0.4.0"

[profile.release]
debug = true

[[bench]]
name = "main_bench"
harness = false
